Criando o menu mobile

--- a/src/css/globals/globals.css
+++ b/src/css/globals/globals.css
@@ -16,5 +16,12 @@ body{
 
 .row{
     display: flex;
-    
+}
+
+.justify-content-between{
+    justify-content: space-between;
+}
+
+.alinhar-itens-no-centro{
+    align-items: center;
 }
