--- a/src/css/session/header.css
+++ b/src/css/session/header.css
@@ -1,5 +1,4 @@
 .header{
-    background-color: green;
     padding: 30px 15px;
 }
 
@@ -37,6 +36,110 @@
     user-select: none;
 }
 
-.header nav li a:hover{
+.header nav ul li a:hover{
+    background-color: var(--primary-color);
+}
+
+.header .menu{
+    width: 60px;
+    height: 60px;
+    align-self: flex-end;
+    display: none;
+}
+
+.header nav label{
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.header .hamburguer{
+    position: relative;
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: var(--white-color);
+    top: 29px;
+    left: 15px;
+    transition: .5s ease-in-out;
+
+}
+
+.header .hamburguer::after,
+.header .hamburguer::before{
+    background-color: var(--white-color);
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition: .2s ease-in-out;
+
+}
+
+.header .hamburguer:before{
+    top: -10px;   
+}
+.header .hamburguer:after{
+    bottom: -10px;
+} 
+
+.header input{
+    display: none;
+}
+
+.header input:checked ~ label .hamburguer{
+    transform: rotate(45deg);
+}
+
+.header input:checked ~ label .hamburguer:before{
+    transform: rotate(90deg);
+    top: 0;
+}
+.header input:checked ~ label .hamburguer::after{
+    transform: rotate(90deg);
+    bottom: 0;
+}
+
+@media(max-width: 1200px){
+    .header{
+        padding: var(--mobile-padding);
+    }
+
+}
+
+@media(max-width: 900px){
+    .header .menu{
+        display: block;
+    }
+
+    .header nav input:checked ~ ul{
+        display: block;
+    }
+
+    .header nav{
+        position: absolute;
+        top: 30px;
+        right: 20px;
+        z-index: 1;
+    }
+
+    .header nav ul{
+        display: none;
+        background-color: var(--color-back-dark);
+        padding: 20px;
+    }
+
+    .header input:checked ~ label{
+        background-color: var(--color-back-dark);
+    
+    }
+
+    .header nav li a{
+        color: var(--white-color);
+        text-align: center;
+        padding: 20px;
+        display: block;
+    }
 
 }
