Criação da seção HOME do portifólio

--- a/src/css/globals/variables.css
+++ b/src/css/globals/variables.css
@@ -3,6 +3,7 @@
     --secundary-color:#fd6c22;
     --white-color:#fff;
     --color-back-dark:#040203;
+    --color-back-dark-alpha:#040203fa;
     --color-grey-dark:#282828;
     --color-grey-light:#353535;
 }
