--- a/src/css/globals/globals.css
+++ b/src/css/globals/globals.css
@@ -14,8 +14,14 @@ body{
     font-size: var(--normal-font);
 }
 
+.container{
+    max-width: 1140px;
+    margin: auto;
+}
+
 .row{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .justify-content-between{
@@ -25,3 +31,33 @@ body{
 .alinhar-itens-no-centro{
     align-items: center;
 }
+
+.inner-shadow{
+    box-shadow: 
+        inset 3px 3px 3px #222327,
+        inset -3px -3px 3px #454545;
+}
+
+.outher-shadow{
+    box-shadow: 
+        3px 3px #222327,
+        -3px -3px 3px #454545;
+}
+
+.redes-sociais a{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    font-size: 1.8rem;
+    text-align: center;
+    margin: 0 4px;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+.redes-sociais a i{
+    line-height: 40px;
+}
+.redes-sociais a:hover{
+    color: var(--primary-color);
+}
+
