--- a/src/css/session/header.css
+++ b/src/css/session/header.css
@@ -101,7 +101,7 @@
     bottom: 0;
 }
 
-@media(max-width: 1200px){
+@media(max-width: 1280px){
     .header{
         padding: var(--mobile-padding);
     }
@@ -126,12 +126,12 @@
 
     .header nav ul{
         display: none;
-        background-color: var(--color-back-dark);
+        background-color: var(--color-back-dark-alpha);
         padding: 20px;
     }
 
     .header input:checked ~ label{
-        background-color: var(--color-back-dark);
+        background-color: var(--color-back-dark-alpha);
     
     }
 
