--- a/src/css/globals/globals.css
+++ b/src/css/globals/globals.css
@@ -61,3 +61,36 @@ body{
     color: var(--primary-color);
 }
 
+
+.section{
+    padding: 7rem 0 7rem;
+
+}
+
+.section-title{
+    text-align: center;
+    flex: 0  0 100%;
+    max-width: 100%;
+    padding: 60px 0;
+}
+
+.section-title h2{
+    font-size: var(--giant-font);
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.botao{
+    font-size: var(--large-font);
+    padding: 10px 20px;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+    background-color: var(--primary-color);
+}
+
+.botao:hover{
+    background-color: var(--secundary-color);
+    color: var(--white-color);
+}
+
+
