--- a/src/css/session/projetos.css
+++ b/src/css/session/projetos.css
@@ -59,6 +59,12 @@
     font-size: 1.4rem;
 }
 
+.projetos .container-projetos .projeto .informacoes-projeto p:nth-child(3){
+    font-weight: 700;
+    margin-top: 10px;
+    font-size: 1.4rem;
+}
+
 .projetos .container-projetos .projeto .informacoes-projeto p{
     font-size: 1.6rem;
     letter-spacing: 1px;
